@@ -1,0 +1,9 @@
+#ifndef GLOBAL_HPP
+#define GLOBAL_HPP
+
+#include "NativeEventFilter.hpp"
+
+extern NativeEventFilter* native_event_filter;
+
+#endif // GLOBAL_HPP
+
